restricted-gtw/gatewayclass-echo.yml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: kong-echo
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: echo-gtw-cfg
    namespace: echo-ns
