restricted-gtw/httproute-echo.yml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: echo
  namespace: echo-app
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: echo-gtw
      namespace: echo-ns
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /echo
      backendRefs:
        - name: echo
          port: 1027
